# yuancon_laverita_v2-docs

./: README.md
!software/: IOALLCHUsegatoolsV1.03.rar  readme.md
!software_open_source/: readme.md
!software_open_source/chuniio/: CMakeLists.txt  chuniio.c  chunitest.c  config.c  hid_impl.c  hid_impl.h
!software_open_source/chuniio/include/: hidapi.h
!softwares/: EZsegatools_V1.03.rar
dimensions/: laverita_logo.ai  yuancon_laverita.ai
pcb_protocol/: hid_reports.txt  readme.md  stm32_details.txt  touch_chip_pins.txt
pcb_protocol/zhou_air_test/: zhou_air_test.ino
pcb_repair/: readme.md
pcb_repros/: readme.md
pcb_repros/yuan_air_template/: fp-info-cache  yuan_air-cache.lib  yuan_air.kicad_pcb  yuan_air.kicad_pcb-bak  yuan_air.sch  yuan_air.sch-bak
